--- a/src/app/sheet.component.html
+++ b/src/app/sheet.component.html
@@ -14,37 +14,14 @@
         <option *ngFor="let bt of character.creatureType.bodyTypes" [value]="bt.amount">{{bt.label}}</option>
       </select>
     </div>
-    <div class="field brawn">
-      <label>Brawn</label>
-      <input [(ngModel)]="character.aspects.brawn" />
-    </div>
-    <div class="field toughness">
-      <label>Toughness</label>
-      <input [(ngModel)]="character.aspects.toughness" />
-    </div>
-    <div class="field agility">
-      <label>Agility</label>
-      <input [(ngModel)]="character.aspects.agility" />
-    </div>
-    <div class="field reflex">
-      <label>Reflex</label>
-      <input [(ngModel)]="character.aspects.reflex" />
-    </div>
-    <div class="field cleverness">
-      <label>Cleverness</label>
-      <input [(ngModel)]="character.aspects.cleverness" />
-    </div>
-    <div class="field serenity">
-      <label>Serenity</label>
-      <input [(ngModel)]="character.aspects.serenity" />
-    </div>
-    <div class="field impression">
-      <label>Impression</label>
-      <input [(ngModel)]="character.aspects.impression" />
-    </div>
-    <div class="field awareness">
-      <label>Awareness</label>
-      <input [(ngModel)]="character.aspects.awareness" />
+    <div class="aspects container">
+      <h4>Aspects</h4>
+      <div *ngFor="let aspect of character.aspects.aspectsList">
+        <label>{{aspect|titlecase}}</label>
+        <input
+          [value]="character.aspects.getAspectRank(aspect)"
+          (input)="character.aspects.setAspectRank(aspect,$event.target.value)" />
+      </div>
     </div>
     <div class="skills container">
       <h4>Skills</h4>
