--- a/src/app/sheet.component.html
+++ b/src/app/sheet.component.html
@@ -16,9 +16,9 @@
     </div>
     <div class="aspects container">
       <h4>Aspects</h4>
-      <div *ngFor="let aspect of character.aspects.aspectsList">
+      <div *ngFor="let aspect of character.aspects.aspectsList" class="field aspect">
         <label>{{aspect|titlecase}}</label>
-        <input
+        <input type="number" class="two-digit"
           [value]="character.aspects.getAspectRank(aspect)"
           (input)="character.aspects.setAspectRank(aspect,$event.target.value)" />
         <button [class]="aspect" (click)="character.makeAspectTest(0,aspect)"></button>
@@ -26,9 +26,9 @@
     </div>
     <div class="skills container">
       <h4>Skills</h4>
-      <div *ngFor="let skill of character.skills.skillsList">
+      <div *ngFor="let skill of character.skills.skillsList" class="field skill">
         <label>{{skill|titlecase}}</label>
-        <input
+        <input type="number" class="two-digit"
           [value]="character.skills.getSkillRank(skill)"
           (input)="character.skills.setSkillRank(skill,$event.target.value)" />
         <button *ngFor="let aspect of character.aspects.aspectsList"
