--- a/src/app/sheet.component.less
+++ b/src/app/sheet.component.less
@@ -1,8 +1,23 @@
+
+input.two-digit {
+    width: 32px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+  
+.field {
+    display: flex;
+    margin-top: 2px;
+    margin-bottom: 3px;
+    align-items: center;
+}
+
 button {
     height: 25px;
     width: 25px;
     background-repeat: no-repeat;
     background-position: center;
+    margin-right: 3px;
 }
 
 button.brawn {
