reorganized component file structure

--- a/src/app/sheet/sheet.component.less
+++ b/src/app/sheet/sheet.component.less
@@ -21,33 +21,33 @@ button {
 }
 
 button.brawn {
-    background-image: url("../assets/img/brawn.png");
+    background-image: url("../../assets/img/brawn.png");
 }
 
 button.toughness {
-    background-image: url("../assets/img/toughness.png");
+    background-image: url("../../assets/img/toughness.png");
 }
 
 button.agility {
-    background-image: url("../assets/img/agility.png");
+    background-image: url("../../assets/img/agility.png");
 }
 
 button.reflex {
-    background-image: url("../assets/img/reflex.png");
+    background-image: url("../../assets/img/reflex.png");
 }
 
 button.impression {
-    background-image: url("../assets/img/impression.png");
+    background-image: url("../../assets/img/impression.png");
 }
 
 button.serenity {
-    background-image: url("../assets/img/serenity.png");
+    background-image: url("../../assets/img/serenity.png");
 }
 
 button.cleverness {
-    background-image: url("../assets/img/cleverness.png");
+    background-image: url("../../assets/img/cleverness.png");
 }
 
 button.awareness {
-    background-image: url("../assets/img/awareness.png");
+    background-image: url("../../assets/img/awareness.png");
 }
