aspects now AspectsComponent

--- a/src/app/sheet/sheet.component.less
+++ b/src/app/sheet/sheet.component.less
@@ -4,6 +4,10 @@ input.two-digit {
     margin-left: 5px;
     margin-right: 5px;
 }
+
+input.out-of-range {
+    background-color: red;
+}
   
 .field {
     display: flex;
