--- a/src/app/sheet/sheet.component.html
+++ b/src/app/sheet/sheet.component.html
@@ -14,16 +14,7 @@
         <option *ngFor="let bt of character.creatureType.bodyTypes" [value]="bt.amount">{{bt.label}}</option>
       </select>
     </div>
-    <div class="aspects container">
-      <h4>Aspects</h4>
-      <div *ngFor="let aspect of character.aspects.aspectsList" class="field aspect">
-        <label>{{aspect|titlecase}}</label>
-        <input type="number" class="two-digit"
-          [value]="character.aspects.getAspectRank(aspect)"
-          (input)="character.aspects.setAspectRank(aspect,$event.target.value)" />
-        <button [class]="aspect" (click)="character.makeAspectTest(0,aspect)"></button>
-      </div>
-    </div>
+    <app-aspects [character]="character"></app-aspects>
     <div class="skills container">
       <h4>Skills</h4>
       <div *ngFor="let skill of character.skills.skillsList" class="field skill">
