Action Log Flow

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-log></app-log>
 Sheets: <a (click)="newChar()">New</a> 
 <a *ngFor="let character of campaign.characters" (click)="select(character)">{{character.about.name}}</a>
 <div *ngIf="character"><app-sheet [character]="character" (saved)="save()" (deleted)="delete($event)"></app-sheet></div>
