--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -7,3 +7,16 @@ a {
   color: blue;
   padding: 3px;
 }
+
+.logPane {
+  position: fixed;
+  width: 25%;
+  height: 100%;
+  border-right: 1px solid black;
+}
+
+.mainPane {
+  margin-left: 30%;
+  width: 65%;
+  height: 100%;
+}
