--- a/src/app/sheet/sheet.component.html
+++ b/src/app/sheet/sheet.component.html
@@ -15,17 +15,7 @@
       </select>
     </div>
     <app-aspects [aspects]="character.aspects"></app-aspects>
-    <div class="skills container">
-      <h4>Skills</h4>
-      <div *ngFor="let skill of character.skills.skillsList" class="field skill">
-        <label>{{skill|titlecase}}</label>
-        <input type="number" class="two-digit"
-          [value]="character.skills.getSkillRank(skill)"
-          (input)="character.skills.setSkillRank(skill,$event.target.value)" />
-        <button *ngFor="let aspect of character.aspects.aspectsList"
-          [class]="aspect" (click)="makeSkillTest(0,aspect,skill)"></button>
-      </div>
-    </div>
+    <app-skills [skills]="character.skills"></app-skills>
      weight: {{character.WeightLbs(0) | number:'1.0-0'}},
       endurance: {{character.Endurance(0) | number:'1.0-1'}},
  
