--- a/src/app/sheet/sheet.component.html
+++ b/src/app/sheet/sheet.component.html
@@ -1,22 +1,5 @@
 <div (change)="save()">
-    Creature Type: {{character.creatureType.name}}
-    <div class="field name">
-      <label>Name</label>
-      <input [(ngModel)]="character.about.name" />
-    </div>
-    <div class="field height">
-      <label>Height</label>
-      <input [(ngModel)]="character.about.height" />
-    </div>
-    <div class="field name">
-      <label>Body Type</label>
-      <select [(ngModel)]="character.about.bodyType" >
-        <option *ngFor="let bt of character.creatureType.bodyTypes" [value]="bt.amount">{{bt.label}}</option>
-      </select>
-    </div>
+    <app-about [about]="character.about"></app-about>
     <app-aspects [aspects]="character.aspects"></app-aspects>
-    <app-skills [skills]="character.skills"></app-skills>
-     weight: {{character.WeightLbs(0) | number:'1.0-0'}},
-      endurance: {{character.Endurance(0) | number:'1.0-1'}},
- 
+    <app-skills [skills]="character.skills"></app-skills> 
 </div>
