--- a/src/app/sheet/about/about.component.html
+++ b/src/app/sheet/about/about.component.html
@@ -1,9 +1,9 @@
 <div class="about container">
-  Creature Type: {{about.character.creatureType.name}}
   <div class="field name">
     <label>Name</label>
     <input [(ngModel)]="about.name" />
   </div>
+  Creature Type: {{about.character.creatureType.name}}
   <div class="field height">
     <label>Height</label>
     <input [(ngModel)]="about.height" />
@@ -15,6 +15,15 @@
     </select>
   </div>
   Weight: {{about.character.WeightLbs(0) | number:'1.0-0'}}<br/>
-  endurance: {{about.character.Endurance(0) | number:'1.0-1'}}
-
+  Endurance: {{about.character.Endurance(0) | number:'1.0-1'}}
+  <div class="descriptions container">
+    <input type="checkbox" class="display" /><label>Show Descriptions</label>
+    <div *ngFor="let description of about.descriptionsList" class="description">
+        <label>{{description|titlecase}}:</label>
+        <textarea 
+        [value]="about.getDescriptionText(description)"
+        (input)="about.setDescriptionText(description,$event.target.value)">
+        </textarea>
+    </div>
+  </div>
 </div>
