--- a/src/app/sheet/aspects/aspects.component.html
+++ b/src/app/sheet/aspects/aspects.component.html
@@ -1,3 +1,4 @@
+<div [class.over-budget]="aspects.character.isOverBudget"></div>
 <div class="aspects container">
     <h4>Aspects</h4>
     <div *ngFor="let aspect of aspects.aspectsList" class="field aspect two-digit">
