--- a/src/app/sheet/sheet.component.less
+++ b/src/app/sheet/sheet.component.less
@@ -1,8 +1,28 @@
+.container {
+    border: 2px solid black;
+    border-radius: 5px;
+    margin: 5px;
+    padding: 3px;
+}
+
+.over-budget+.container {
+    border-color: red;
+}
+
+h4 {
+    margin-top: 3px;
+    margin-bottom: 6px;
+    font-size: large;
+}
 
 .two-digit input {
     width: 32px;
     margin-left: 5px;
     margin-right: 5px;
+}
+
+.six-digit input {
+    width: 64px;
 }
 
 input.out-of-range {
