--- a/src/app/sheet/skills/skills.component.html
+++ b/src/app/sheet/skills/skills.component.html
@@ -1,3 +1,4 @@
+<div [class.over-budget]="skills.character.isOverBudget"></div>
 <div class="skills container">
     <h4>Skills</h4>
     <div *ngFor="let skill of skills.skillsList" class="field skill two-digit">
