--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,14 +1,14 @@
 <div (mousemove)="onMouseMove($event)" class="viewer">
     <div id="tokens">
         <div class="container character" *ngFor="let char of campaign.characters" 
-            [style.left]="locationX(char)+'px'" [style.top]="locationY(char)+'px'">
-            <div class="token" (click)="select(char)" [class.selected]="char==character" [style.width]="scale+'px'" [style.height]="scale+'px'">
+            [style.left]="locationX(char)+'px'" [style.top]="locationY(char)+'px'" [class.selected]="char==character">
+            <div class="token" (click)="select(char)" [style.width]="scale+'px'" [style.height]="scale+'px'">
                 <img [src]="char.about.url"/>
             </div>
             <div class="menu" [class.visible]="openMenu && char==character">
                 <a (click)="openMenuSelectEdit()" [class.selected]="openMenuSelect=='edit'">Edit</a>
                 <div class="editMenu" [class.visible]="openMenuSelect=='edit'">
-                    <div class="editMenuBox">
+                    <div class="editMenuBox" (change)="save()">
                         Token <input [(ngModel)]="char.about.url" />
                     </div>
                 </div>
@@ -16,9 +16,25 @@
                 <a (click)="openMenuSelectMove()">Move</a>
             </div>
         </div>
-        <div id="reposition" class="container" [class.visible]="mouseMode=='reposition'">
+        <div id="reposition" class="container" [class.visible]="mouseMode=='reposition' || mouseMode=='move'">
             <div class="token" (click)="placeReposition()" [style.width]="scale+'px'" [style.height]="scale+'px'">
                 <img [src]="character.about.url" />
+            </div>
+        </div>
+        <div class="movement" *ngFor="let action of movements" [class.selected]="action.character==character">
+            <div class="container path" *ngFor="let path of action.data.path; let i=index" 
+                [style.left]="(path.x - .5) * scale + offsetX +'px'" 
+                [style.top]="(path.y - .5) * scale + offsetY +'px'">
+                <div class="token" [style.width]="scale+'px'" [style.height]="scale+'px'">
+                    <img [src]="action.character.about.url" />
+                </div>
+                {{ i+1 }} <a (click)="deleteMove(action)">Undo</a>
+                <select [(ngModel)]="path.speed">
+                    <option value="0.25">Walk</option>
+                    <option value="0.5">Jog</option>
+                    <option value="0.75">Run</option>
+                    <option value="1">Sprint</option>
+                </select>
             </div>
         </div>
     </div>
