--- a/src/app/sheet/sheet.component.html
+++ b/src/app/sheet/sheet.component.html
@@ -1,5 +1,6 @@
 <div (change)="save()">
     <app-about [about]="character.about"></app-about>
     <app-aspects [aspects]="character.aspects"></app-aspects>
-    <app-skills [skills]="character.skills"></app-skills> 
+    <app-skills [skills]="character.skills"></app-skills>
+    <app-specialties [specialties]="character.specialties"></app-specialties>
 </div>
