--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
   <div class="view">
     <div *ngIf="character && mode=='sheet'"><app-sheet [character]="character" (saved)="save()" (deleted)="delete($event)"></app-sheet></div>
     <div *ngIf="mode=='map'"><app-map [character]="character" (saved)="save()" (selected)="select($event)"></app-map></div>
-    <div *ngIf="mode=='status'"><app-status [character]="character" [now]="campaign.now" (saved)="save()"></app-status></div>
+    <div *ngIf="character && mode=='status'"><app-status [character]="character" [now]="campaign.now" (saved)="save()"></app-status></div>
   </div>
 </div>
 
