--- a/src/app/sheet/aspects/aspects.component.html
+++ b/src/app/sheet/aspects/aspects.component.html
@@ -1,9 +1,9 @@
 <div [class.over-budget]="aspects.character.isOverBudget"></div>
 <div class="aspects container">
     <h4>Aspects</h4>
-    <div *ngFor="let aspect of aspects.aspectsList" class="field aspect two-digit">
+    <div *ngFor="let aspect of aspects.aspectsList" class="field aspect three-digit">
       <label>{{aspect|titlecase}}</label>
-      <input type="number" [class.out-of-range]="inputsOutOfRange[aspect]"
+      <input type="number" step="0.1" [class.out-of-range]="inputsOutOfRange[aspect]"
         [value]="aspects.getAspectRank(aspect)"
         (input)="setAspectRank(aspect,$event.target.value)" />
       <button [class]="aspect" (click)="makeAspectTest(aspect)"></button>
