--- a/src/app/sheet/sheet.component.less
+++ b/src/app/sheet/sheet.component.less
@@ -21,6 +21,12 @@ h4 {
     margin-right: 5px;
 }
 
+.three-digit input {
+    width: 45px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
 .six-digit input {
     width: 64px;
 }
