--- a/src/app/sheet/skills/skills.component.html
+++ b/src/app/sheet/skills/skills.component.html
@@ -1,9 +1,9 @@
 <div [class.over-budget]="skills.character.isOverBudget"></div>
 <div class="skills container">
     <h4>Skills</h4>
-    <div *ngFor="let skill of skills.skillsList" class="field skill two-digit">
+    <div *ngFor="let skill of skills.skillsList" class="field skill three-digit">
       <label>{{skill|titlecase}}</label>
-      <input type="number" [class.out-of-range]="inputsOutOfRange[skill]"
+      <input type="number" step="0.1" [class.out-of-range]="inputsOutOfRange[skill]"
         [value]="skills.getSkillRank(skill)"
         (input)="setSkillRank(skill,$event.target.value)" />
       <button *ngFor="let aspect of skills.character.aspects.aspectsList"
