--- a/src/app/sheet/aspects/aspects.component.html
+++ b/src/app/sheet/aspects/aspects.component.html
@@ -6,6 +6,7 @@
       <input type="number" step="0.1" [class.out-of-range]="inputsOutOfRange[aspect]"
         [value]="aspects.getAspectRank(aspect)"
         (input)="setAspectRank(aspect,$event.target.value)" />
+        <div class="probability_description">({{aspects.getAspectProbabilityDescription(aspect)}})</div>
       <button [class]="aspect" (click)="makeAspectTest(aspect)"></button>
     </div>
 </div>
