--- a/src/app/sheet/sheet.component.less
+++ b/src/app/sheet/sheet.component.less
@@ -42,6 +42,12 @@ input.out-of-range {
     align-items: center;
 }
 
+.probability_description {
+    display: inline-block;
+    width: 80px;
+    text-align: center;
+}
+
 button {
     height: 25px;
     width: 25px;
