--- a/src/app/sheet/skills/skills.component.html
+++ b/src/app/sheet/skills/skills.component.html
@@ -6,6 +6,7 @@
       <input type="number" step="0.1" [class.out-of-range]="inputsOutOfRange[skill]"
         [value]="skills.getSkillRank(skill)"
         (input)="setSkillRank(skill,$event.target.value)" />
+        <div class="probability_description">({{skills.getSkillProbabilityDescription(skill)}})</div>
       <button *ngFor="let aspect of skills.character.aspects.aspectsList"
         [class]="aspect" (click)="makeSkillTest(aspect,skill)"></button>
     </div>
