--- a/src/app/sheet/sheet.component.less
+++ b/src/app/sheet/sheet.component.less
@@ -15,6 +15,12 @@ h4 {
     font-size: large;
 }
 
+.one-digit input {
+    width: 24px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
 .two-digit input {
     width: 32px;
     margin-left: 5px;
