--- a/src/app/sheet/specialties/specialties.component.html
+++ b/src/app/sheet/specialties/specialties.component.html
@@ -1,4 +1,10 @@
 <div [class.over-budget]="specialties.character.isOverBudget"></div>
 <div class="specialties container">
     <h4>Specialties</h4>
+    <div *ngFor="let specialty of specialties.getSpecialtiesList()" class="field specialty one-digit">
+        <input type="number" step="1" min="{{specialties.MIN_RANK}}" max="{{specialties.MAX_RANK}}"
+        [value]="specialties.getSpecialtyRank(specialty)"
+        (input)="specialties.setSpecialtyRank(specialty,$event.target.value)" />
+        <label>{{specialties.getDisplayName(specialty) | titlecase}}</label>
+    </div>
 </div>
