--- a/src/app/sheet/aspects/aspects.component.html
+++ b/src/app/sheet/aspects/aspects.component.html
@@ -3,7 +3,8 @@
     <h4>Aspects</h4>
     <div *ngFor="let aspect of aspects.aspectsList" class="field aspect three-digit">
       <label>{{aspect|titlecase}}</label>
-      <input type="number" step="0.1" [class.out-of-range]="inputsOutOfRange[aspect]"
+      <input type="number" step="0.1" min="{{MINIMUM_VALUE}}" max="{{MAXIMUM_VALUE}}"
+        [class.out-of-range]="inputsOutOfRange[aspect]"
         [value]="aspects.getAspectRank(aspect)"
         (input)="setAspectRank(aspect,$event.target.value)" />
         <div class="probability_description">({{aspects.getAspectProbabilityDescription(aspect)}})</div>
