--- a/src/app/sheet/skills/skills.component.html
+++ b/src/app/sheet/skills/skills.component.html
@@ -3,7 +3,8 @@
     <h4>Skills</h4>
     <div *ngFor="let skill of skills.skillsList" class="field skill three-digit">
       <label>{{skill|titlecase}}</label>
-      <input type="number" step="0.1" [class.out-of-range]="inputsOutOfRange[skill]"
+      <input type="number" step="0.1" min="{{MINIMUM_VALUE}}" max="{{MAXIMUM_VALUE}}"
+        [class.out-of-range]="inputsOutOfRange[skill]"
         [value]="skills.getSkillRank(skill)"
         (input)="setSkillRank(skill,$event.target.value)" />
         <div class="probability_description">({{skills.getSkillProbabilityDescription(skill)}})</div>
