specialties and weight fixes

--- a/src/app/sheet/about/about.component.html
+++ b/src/app/sheet/about/about.component.html
@@ -34,6 +34,7 @@
   Improvement Points: {{about.improvementPoints}} <br/>
   IP Spent on Aspects: {{about.character.aspects.getSpentIPTotal()}} <br/>
   IP Spent on Skills: {{about.character.skills.getSpentIPTotal()}} <br/>
+  IP Spend on Specialties: {{about.character.specialties.getSpentIPTotal()}} <br/>
   <input type="checkbox" class="display descriptions" /><label>Show Descriptions</label>
   <input type="checkbox" class="hide blank-descriptions" /><label class="blank-descriptions">Hide Blank</label>
   <div class="descriptions container">
