--- a/src/app/sheet/sheet.component.html
+++ b/src/app/sheet/sheet.component.html
@@ -1,6 +1,7 @@
-<div (change)="save()">
+<div (change)="save()" class="sheet-container">
     <app-about [about]="character.about"></app-about>
     <app-aspects [aspects]="character.aspects"></app-aspects>
     <app-skills [skills]="character.skills"></app-skills>
     <app-specialties [specialties]="character.specialties"></app-specialties>
+    <app-traits [traits]="character.traits"></app-traits>
 </div>
