--- a/src/app/sheet/about/about.component.less
+++ b/src/app/sheet/about/about.component.less
@@ -25,3 +25,7 @@ input[type=checkbox].display.descriptions:checked~.blank-descriptions {
 label {
     margin-right: 5px;
 }
+
+.about.container .descriptions.container {
+    height: auto;
+}
