--- a/src/app/sheet/aspects/aspects.component.html
+++ b/src/app/sheet/aspects/aspects.component.html
@@ -10,4 +10,9 @@
         <div class="probability_description">({{aspects.getAspectProbabilityDescription(aspect)}})</div>
       <button [class]="aspect" (click)="makeAspectTest(aspect)"></button>
     </div>
+    Physical Action Duration: {{physicalActionDuration}}<br/>
+    Mental Action Duration: {{mentalActionDuration}}<br/>
+    Physical Reaction Time: {{physicalReactionTimeRange}}<br/>
+    Mental Reaction Time: {{mentalReactionTimeRange}}<br/>
+    Surprise Multiplier: {{surpriseMultiplier}}<br/>  
 </div>
