--- a/src/app/sheet/about/about.component.html
+++ b/src/app/sheet/about/about.component.html
@@ -11,25 +11,31 @@
   </div>
   <div class="field frame-size">
     <label>Frame Size</label>
-    <input [(ngModel)]="about.frameSize" type="range" min="-7" max="7" step="0.1"/>
+    <input [(ngModel)]="frameSize" type="range" min="-7" max="7" step="0.1"/>
     ({{about.frameSizeProbabilityDescription}})
   </div>
   <div class="field muscle-bulk">
     <label>Muscle Bulk</label>
-    <input [(ngModel)]="about.muscleBulk" type="range" min="-7" max="7" step="0.1"/>
+    <input [(ngModel)]="muscleBulk" type="range" min="-7" max="7" step="0.1"/>
     ({{about.muscleBulkProbabilityDescription}})
   </div>
   <div class="field body-fat">
     <label>Body Fat</label>
-    <input [(ngModel)]="about.bodyFat" type="range" min="-7" max="7" step="0.1"/>
+    <input [(ngModel)]="bodyFat" type="range" min="-7" max="7" step="0.1"/>
     ({{about.bodyFatProbabilityDescription}})
   </div>
-  Weight: {{about.character.WeightLbs(0) | number:'1.0-0'}} lbs<br/>
-  Endurance: {{about.character.Endurance(0) | number:'1.0-1'}}<br/>
-  Physical Eccentricity: {{about.physicalEccentricity(0).toFixed(1)}}<br/>
-  Qi Capacity: {{about.character.maxQi}}<br/>
-  Physical Defense: {{about.character.PhysicalDefense(0).toFixed(2)}}<br/>
-  Magical Defense: {{about.character.MagicalDefense(0).toFixed(2)}}<br/>
+  <input type="checkbox" class="display portrait" (click)="drawPortrait()"/><label>Show Portrait</label><br/>
+  <div class="portrait-frame">
+    <canvas #portrait width="{{CANVAS_SIZE}}" height="{{CANVAS_SIZE}}"></canvas>
+  </div>
+  <div class="derived-attributes">
+    Weight: {{about.character.WeightLbs(0) | number:'1.0-0'}} lbs<br/>
+    Endurance: {{about.character.Endurance(0) | number:'1.0-1'}}<br/>
+    Physical Eccentricity: {{about.physicalEccentricity(0).toFixed(1)}}<br/>
+    Qi Capacity: {{about.character.maxQi}}<br/>
+    Physical Defense: {{about.character.PhysicalDefense(0).toFixed(2)}}<br/>
+    Magical Defense: {{about.character.MagicalDefense(0).toFixed(2)}}<br/>
+  </div>
   <div class="field potential-rating six-digit">
     <label>Potential Rating</label>
     <input [(ngModel)]="about.potentialRating" type="number" />
