Update Portrait from Brawn

--- a/src/app/sheet/sheet.component.html
+++ b/src/app/sheet/sheet.component.html
@@ -1,5 +1,5 @@
 <div (change)="save()" class="sheet-container">
-    <app-about [about]="character.about"></app-about>
+    <app-about [about]="character.about" [brawn]="character.aspects.getAspectRank('brawn')"></app-about>
     <app-aspects [aspects]="character.aspects"></app-aspects>
     <app-skills [skills]="character.skills"></app-skills>
     <app-specialties [specialties]="character.specialties"></app-specialties>
