--- a/src/app/sheet/aspects/aspects.component.less
+++ b/src/app/sheet/aspects/aspects.component.less
@@ -1,3 +1,32 @@
 label {
     width: 72px;
 }
+
+.axis .name.second,
+.axis .value {
+    text-align: right;
+}
+
+.axis .value.second {
+    margin-left: 15px;
+}
+
+.axis label {
+    display: inline-block;
+}
+
+.axis label.name {
+    width: 60px;
+}
+
+.axis label.value {
+    width: 40px;
+}
+
+.axis-container {
+    border: solid black 2px;
+    border-radius: 5px;
+    width: 220px;
+    padding: 5px;
+    margin: 5px 0px 3px 3px;
+}
