--- a/src/app/sheet/specialties/specialties.component.less
+++ b/src/app/sheet/specialties/specialties.component.less
@@ -30,3 +30,9 @@ input[type=checkbox].display.unknown-specialties:checked~.specialties.display-gr
 .field.specialty {
     white-space: nowrap;
 }
+
+.specialty-category-label {
+    font-weight: bold;
+    text-align: center;
+    margin: 4px 0px 4px 0px;
+}
