--- a/src/app/sheet/traits/traits.component.html
+++ b/src/app/sheet/traits/traits.component.html
@@ -1,4 +1,26 @@
 <div [class.over-budget]="traits.character.isOverBudget"></div>
 <div class="traits container">
     <h4>Traits</h4>
+    <input type="checkbox" class="display unknown-traits" /><label>Show Unknown Traits</label><br/>
+    <div class="trait categories">
+        <div *ngFor="let traitType of traitTypes" class="trait container">
+            <div class="trait-container-label">{{getDisplayName(traitType)}}</div>
+            <div *ngFor="let trait of getTraitList(traitType)" class="trait single"
+            [class.available]="traits.isAvailable(trait)"
+            [class.unknown]="isUnknown(trait)">
+                <div class="documentation mouseover">
+                    <div class="description">{{getDescription(trait)}}</div>
+                    <div class="requirements">
+                        <div *ngFor="let passedReq of getPassedRequirements(trait)" class="passed reqs">{{passedReq}}</div>
+                        <div *ngFor="let failedReq of getFailedRequirements(trait)" class="failed reqs">{{failedReq}}</div>
+                    </div>
+                </div>
+                <input type="checkbox"
+                  [checked]="traits.hasTrait(trait)" 
+                  (input)="traits.setTrait(trait,$event.target.checked)"
+                  [attr.disabled]="isDisabled(trait)"/>
+                <label>{{getDisplayName(trait)}}</label>
+            </div>
+        </div>
+    </div>
 </div>
