convert damage to wounds

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -15,6 +15,7 @@
                 </div>
                 <a (click)="openMenuSelectReposition()">Reposition</a>
                 <a (click)="openMenuSelectMove()">Move</a>
+                <a (click)="openMenuSelectPunch()">Punch</a>
             </div>
         </div>
         <div id="reposition" class="container" [class.visible]="mouseMode=='reposition' || mouseMode=='move'">
