--- a/src/app/sheet/about/about.component.html
+++ b/src/app/sheet/about/about.component.html
@@ -46,6 +46,8 @@
   IP Spent on Skills: {{about.character.skills.getSpentIPTotal()}} <br/>
   IP Spent on Specialties: {{about.character.specialties.getSpentIPTotal()}} <br/>
   IP Spent on Traits: {{about.character.traits.getSpentIPTotal()}} <br/>
+  IP Spent on Spells: {{about.character.spells.getSpentIPTotal()}} <br/>
+  IP Spend on Finances: {{about.character.equipment.getSpentIPTotal()}} <br/>
   <input type="checkbox" class="display descriptions" /><label>Show Descriptions</label>
   <input type="checkbox" class="hide blank-descriptions" /><label class="blank-descriptions">Hide Blank</label>
   <div class="descriptions container">
