--- a/src/app/sheet/sheet.component.html
+++ b/src/app/sheet/sheet.component.html
@@ -4,5 +4,6 @@
     <app-skills [skills]="character.skills"></app-skills>
     <app-specialties [specialties]="character.specialties"></app-specialties>
     <app-traits [traits]="character.traits"></app-traits>
+    <app-spells [spells]="character.spells"></app-spells>
     <app-equipment [equipment]="character.equipment"></app-equipment>
 </div>
